WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 65539
[CSSRegions]Fix build after changeset 92106
https://bugs.webkit.org/show_bug.cgi?id=65539
Summary
[CSSRegions]Fix build after changeset 92106
Mihnea Ovidenie
Reported
2011-08-02 07:17:13 PDT
CSSRegions build was broken after changeset 92106 (
https://bugs.webkit.org/show_bug.cgi?id=65297
).
Attachments
Patch
(1.47 KB, patch)
2011-08-02 07:22 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2011-08-02 07:22:10 PDT
Created
attachment 102645
[details]
Patch
WebKit Review Bot
Comment 2
2011-08-02 08:59:05 PDT
Comment on
attachment 102645
[details]
Patch Clearing flags on attachment: 102645 Committed
r92195
: <
http://trac.webkit.org/changeset/92195
>
WebKit Review Bot
Comment 3
2011-08-02 08:59:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug