[CSSRegions]Fix build after changeset 92106 https://bugs.webkit.org/show_bug.cgi?id=65539

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-08-02
Reviewed by Adam Roben.

No new tests since it is just a build fix.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::applyProperty):

Canonical link: https://commits.webkit.org/81338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92195 268f45cc-cd09-0410-ab3c-d52691b4dbfc